[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "universal-mcp-google-drive"
version = "0.1.4"
description = "A Universal MCP Application: universal_mcp_google_drive"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [
 "langgraph>=0.6.5",
 "universal_mcp>=0.1.23",
]
[[project.authors]]
name = "Manoj Bajaj"
email = "manoj@agentr.dev"

[project.license]
text = "MIT"

[project.optional-dependencies]
test = [ "pytest>=7.0.0,<9.0.0", "pytest-cov",]
dev = [ "ruff", "pre-commit",]

[project.scripts]
universal_mcp_google_drive = "universal_mcp_google_drive:main"

[project.urls]
Homepage = "https://github.com/universal-mcp/google-drive"
Repository = "https://github.com/universal-mcp/google-drive"

[tool.ruff]
line-length = 88
select = [ "E", "W", "F", "I", "UP", "PL", "T20",]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.hatch.version]
path = "src/universal_mcp_google_drive/__init__.py"

[tool.coverage.run]
source = [ "src/universal_mcp_google_drive",]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.hatch.envs.default]
dependencies = [ "pytest", "pytest-cov",]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report term-missing --cov-config=pyproject.toml --cov=src/universal_mcp_google_drive --cov=tests {args:tests}"
lint = "ruff check . && ruff format --check ."
format = "ruff format ."
